// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`taskLog (isCI = false) > error > clears output if showLog = false 1`] = `
[
  "│
",
  "◇  foo
",
  "│
",
  "│  line 0
",
  "<erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "│  line 0
│  line 1
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "│
■  some error!
",
]
`;

exports[`taskLog (isCI = false) > error > renders output with message 1`] = `
[
  "│
",
  "◇  foo
",
  "│
",
  "│  line 0
",
  "<erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "│  line 0
│  line 1
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "│
■  some error!
",
  "│
│  line 0
│  line 1
",
]
`;

exports[`taskLog (isCI = false) > group > applies limit per group 1`] = `
[
  "│
",
  "◇  Some log
",
  "│
",
  "│  Group 0
",
  "│  Group 0 line 0
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "│  Group 0
",
  "│  Group 0 line 0
",
  "│  Group 1
",
  "│  Group 1 line 0
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "│  Group 0
",
  "│  Group 0 line 0
│  Group 0 line 1
",
  "│  Group 1
",
  "│  Group 1 line 0
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "│  Group 0
",
  "│  Group 0 line 0
│  Group 0 line 1
",
  "│  Group 1
",
  "│  Group 1 line 0
│  Group 1 line 1
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "│  Group 0
",
  "│  Group 0 line 1
│  Group 0 line 2
",
  "│  Group 1
",
  "│  Group 1 line 0
│  Group 1 line 1
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "│  Group 0
",
  "│  Group 0 line 1
│  Group 0 line 2
",
  "│  Group 1
",
  "│  Group 1 line 1
│  Group 1 line 2
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "│  Group 0
",
  "│  Group 0 line 2
│  Group 0 line 3
",
  "│  Group 1
",
  "│  Group 1 line 1
│  Group 1 line 2
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "│  Group 0
",
  "│  Group 0 line 2
│  Group 0 line 3
",
  "│  Group 1
",
  "│  Group 1 line 2
│  Group 1 line 3
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "│  Group 0
",
  "│  Group 0 line 3
│  Group 0 line 4
",
  "│  Group 1
",
  "│  Group 1 line 2
│  Group 1 line 3
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "│  Group 0
",
  "│  Group 0 line 3
│  Group 0 line 4
",
  "│  Group 1
",
  "│  Group 1 line 3
│  Group 1 line 4
",
]
`;

exports[`taskLog (isCI = false) > group > can render multiple groups of different sizes 1`] = `
[
  "│
",
  "◇  Some log
",
  "│
",
  "│  Group 0
",
  "│  Group 0 line 0
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "│  Group 0
",
  "│  Group 0 line 0
│  Group 0 line 1
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "│  Group 0
",
  "│  Group 0 line 0
│  Group 0 line 1
│  Group 0 line 2
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "│  Group 0
",
  "│  Group 0 line 0
│  Group 0 line 1
│  Group 0 line 2
",
  "│  Group 1
",
  "│  Group 1 line 0
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "│  Group 0
",
  "│  Group 0 line 0
│  Group 0 line 1
│  Group 0 line 2
",
  "│  Group 1
",
  "│  Group 1 line 0
│  Group 1 line 1
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "│  Group 0
",
  "│  Group 0 line 0
│  Group 0 line 1
│  Group 0 line 2
",
  "│  Group 1
",
  "│  Group 1 line 0
│  Group 1 line 1
│  Group 1 line 2
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "│  Group 0
",
  "│  Group 0 line 0
│  Group 0 line 1
│  Group 0 line 2
",
  "│  Group 1
",
  "│  Group 1 line 0
│  Group 1 line 1
│  Group 1 line 2
│  Group 1 line 3
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "│  Group 0
",
  "│  Group 0 line 0
│  Group 0 line 1
│  Group 0 line 2
",
  "│  Group 1
",
  "│  Group 1 line 0
│  Group 1 line 1
│  Group 1 line 2
│  Group 1 line 3
│  Group 1 line 4
",
]
`;

exports[`taskLog (isCI = false) > group > can render multiple groups of equal size 1`] = `
[
  "│
",
  "◇  Some log
",
  "│
",
  "│  Group 0
",
  "│  Group 0 line 0
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "│  Group 0
",
  "│  Group 0 line 0
",
  "│  Group 1
",
  "│  Group 1 line 0
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "│  Group 0
",
  "│  Group 0 line 0
│  Group 0 line 1
",
  "│  Group 1
",
  "│  Group 1 line 0
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "│  Group 0
",
  "│  Group 0 line 0
│  Group 0 line 1
",
  "│  Group 1
",
  "│  Group 1 line 0
│  Group 1 line 1
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "│  Group 0
",
  "│  Group 0 line 0
│  Group 0 line 1
│  Group 0 line 2
",
  "│  Group 1
",
  "│  Group 1 line 0
│  Group 1 line 1
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "│  Group 0
",
  "│  Group 0 line 0
│  Group 0 line 1
│  Group 0 line 2
",
  "│  Group 1
",
  "│  Group 1 line 0
│  Group 1 line 1
│  Group 1 line 2
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "│  Group 0
",
  "│  Group 0 line 0
│  Group 0 line 1
│  Group 0 line 2
│  Group 0 line 3
",
  "│  Group 1
",
  "│  Group 1 line 0
│  Group 1 line 1
│  Group 1 line 2
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "│  Group 0
",
  "│  Group 0 line 0
│  Group 0 line 1
│  Group 0 line 2
│  Group 0 line 3
",
  "│  Group 1
",
  "│  Group 1 line 0
│  Group 1 line 1
│  Group 1 line 2
│  Group 1 line 3
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "│  Group 0
",
  "│  Group 0 line 0
│  Group 0 line 1
│  Group 0 line 2
│  Group 0 line 3
│  Group 0 line 4
",
  "│  Group 1
",
  "│  Group 1 line 0
│  Group 1 line 1
│  Group 1 line 2
│  Group 1 line 3
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "│  Group 0
",
  "│  Group 0 line 0
│  Group 0 line 1
│  Group 0 line 2
│  Group 0 line 3
│  Group 0 line 4
",
  "│  Group 1
",
  "│  Group 1 line 0
│  Group 1 line 1
│  Group 1 line 2
│  Group 1 line 3
│  Group 1 line 4
",
]
`;

exports[`taskLog (isCI = false) > group > handles empty groups 1`] = `
[
  "│
",
  "◇  Some log
",
  "│
",
  "◆  Group success!
",
]
`;

exports[`taskLog (isCI = false) > group > renders error state 1`] = `
[
  "│
",
  "◇  Some log
",
  "│
",
  "│  Group 0
",
  "│  Group 0 line 0
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "■  Group error!
",
]
`;

exports[`taskLog (isCI = false) > group > renders group error state 1`] = `
[
  "│
",
  "◇  Some log
",
  "│
",
  "│  Group 0
",
  "│  Group 0 line 0
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "■  Group error!
",
]
`;

exports[`taskLog (isCI = false) > group > renders group success state 1`] = `
[
  "│
",
  "◇  Some log
",
  "│
",
  "│  Group 0
",
  "│  Group 0 line 0
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "◆  Group success!
",
]
`;

exports[`taskLog (isCI = false) > group > renders success state 1`] = `
[
  "│
",
  "◇  Some log
",
  "│
",
  "│  Group 0
",
  "│  Group 0 line 0
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "◆  Group success!
",
]
`;

exports[`taskLog (isCI = false) > group > showLog shows all groups in order 1`] = `
[
  "│
",
  "◇  Some log
",
  "│
",
  "│  Group 0
",
  "│  Group 0 line 0
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "│  Group 0
",
  "│  Group 0 line 0
│  Group 0 line 1
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "│  Group 0
",
  "│  Group 0 line 0
│  Group 0 line 1
│  Group 0 line 2
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "│  Group 0
",
  "│  Group 0 line 0
│  Group 0 line 1
│  Group 0 line 2
",
  "│  Group 1
",
  "│  Group 1 line 0
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "│  Group 0
",
  "│  Group 0 line 0
│  Group 0 line 1
│  Group 0 line 2
",
  "│  Group 1
",
  "│  Group 1 line 0
│  Group 1 line 1
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "│  Group 0
",
  "│  Group 0 line 0
│  Group 0 line 1
│  Group 0 line 2
",
  "│  Group 1
",
  "│  Group 1 line 0
│  Group 1 line 1
│  Group 1 line 2
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "│  Group 0
",
  "│  Group 0 line 0
│  Group 0 line 1
│  Group 0 line 2
",
  "│  Group 1
",
  "│  Group 1 line 0
│  Group 1 line 1
│  Group 1 line 2
│  Group 1 line 3
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "│  Group 0
",
  "│  Group 0 line 0
│  Group 0 line 1
│  Group 0 line 2
",
  "│  Group 1
",
  "│  Group 1 line 0
│  Group 1 line 1
│  Group 1 line 2
│  Group 1 line 3
│  Group 1 line 4
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "◆  Group 0 success!
",
  "│  Group 1
",
  "│  Group 1 line 0
│  Group 1 line 1
│  Group 1 line 2
│  Group 1 line 3
│  Group 1 line 4
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "◆  Group 0 success!
",
  "■  Group 1 error!
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "│
■  overall error
",
  "│  Group 0
",
  "│
│  Group 0 line 0
│  Group 0 line 1
│  Group 0 line 2
",
  "│  Group 1
",
  "│
│  Group 1 line 0
│  Group 1 line 1
│  Group 1 line 2
│  Group 1 line 3
│  Group 1 line 4
",
]
`;

exports[`taskLog (isCI = false) > message > can write line by line 1`] = `
[
  "│
",
  "◇  foo
",
  "│
",
  "│  line 0
",
  "<erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "│  line 0
│  line 1
",
]
`;

exports[`taskLog (isCI = false) > message > can write multiple lines 1`] = `
[
  "│
",
  "◇  foo
",
  "│
",
  "│  line 0
│  line 1
",
]
`;

exports[`taskLog (isCI = false) > message > enforces limit if set 1`] = `
[
  "│
",
  "◇  foo
",
  "│
",
  "│  line 0
",
  "<erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "│  line 0
│  line 1
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "│  line 1
│  line 2
",
]
`;

exports[`taskLog (isCI = false) > message > prints empty lines 1`] = `
[
  "│
",
  "◇  foo
",
  "│
",
  "│  line 1
",
  "<erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "│  line 1
│
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "│  line 1
│
│  line 3
",
]
`;

exports[`taskLog (isCI = false) > message > raw = true appends message text until newline 1`] = `
[
  "│
",
  "◇  foo
",
  "│
",
  "│  line 0
",
  "<erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "│  line 0still line 0
",
  "<erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "│  line 0still line 0
│  line 1
",
]
`;

exports[`taskLog (isCI = false) > message > raw = true works when mixed with non-raw messages 1`] = `
[
  "│
",
  "◇  foo
",
  "│
",
  "│  line 0
",
  "<erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "│  line 0still line 0
",
  "<erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "│  line 0still line 0
│  line 1
",
]
`;

exports[`taskLog (isCI = false) > message > raw = true works when started with non-raw messages 1`] = `
[
  "│
",
  "◇  foo
",
  "│
",
  "│  line 0
",
  "<erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "│  line 0
│  line 1
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "│  line 0
│  line 1still line 1
",
]
`;

exports[`taskLog (isCI = false) > retainLog > error > outputs limited log with limit by default 1`] = `
[
  "│
",
  "◇  foo
",
  "│
",
  "│  line 0
",
  "<erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "│  line 0
│  line 1
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "│  line 1
│  line 2
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "│  line 2
│  line 3
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "│
■  woo!
",
  "│
│  line 2
│  line 3
",
]
`;

exports[`taskLog (isCI = false) > retainLog > error > retainLog = false outputs full log without limit 1`] = `
[
  "│
",
  "◇  foo
",
  "│
",
  "│  line 0
",
  "<erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "│  line 0
│  line 1
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "│  line 0
│  line 1
│  line 2
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "│  line 0
│  line 1
│  line 2
│  line 3
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "│
■  woo!
",
  "│
│  line 0
│  line 1
│  line 2
│  line 3
",
]
`;

exports[`taskLog (isCI = false) > retainLog > error > retainLog = false outputs limited log with limit 1`] = `
[
  "│
",
  "◇  foo
",
  "│
",
  "│  line 0
",
  "<erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "│  line 0
│  line 1
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "│  line 1
│  line 2
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "│  line 2
│  line 3
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "│
■  woo!
",
  "│
│  line 2
│  line 3
",
]
`;

exports[`taskLog (isCI = false) > retainLog > error > retainLog = true outputs full log 1`] = `
[
  "│
",
  "◇  foo
",
  "│
",
  "│  line 0
",
  "<erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "│  line 0
│  line 1
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "│  line 0
│  line 1
│  line 2
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "│  line 0
│  line 1
│  line 2
│  line 3
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "│
■  woo!
",
  "│
│  line 0
│  line 1
│  line 2
│  line 3
",
]
`;

exports[`taskLog (isCI = false) > retainLog > error > retainLog = true outputs full log with limit 1`] = `
[
  "│
",
  "◇  foo
",
  "│
",
  "│  line 0
",
  "<erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "│  line 0
│  line 1
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "│  line 1
│  line 2
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "│  line 2
│  line 3
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "│
■  woo!
",
  "│
│  line 0
│  line 1
│  line 2
│  line 3
",
]
`;

exports[`taskLog (isCI = false) > retainLog > success > outputs limited log with limit by default 1`] = `
[
  "│
",
  "◇  foo
",
  "│
",
  "│  line 0
",
  "<erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "│  line 0
│  line 1
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "│  line 1
│  line 2
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "│  line 2
│  line 3
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "│
◆  woo!
",
  "│
│  line 2
│  line 3
",
]
`;

exports[`taskLog (isCI = false) > retainLog > success > retainLog = false outputs full log without limit 1`] = `
[
  "│
",
  "◇  foo
",
  "│
",
  "│  line 0
",
  "<erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "│  line 0
│  line 1
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "│  line 0
│  line 1
│  line 2
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "│  line 0
│  line 1
│  line 2
│  line 3
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "│
◆  woo!
",
  "│
│  line 0
│  line 1
│  line 2
│  line 3
",
]
`;

exports[`taskLog (isCI = false) > retainLog > success > retainLog = false outputs limited log with limit 1`] = `
[
  "│
",
  "◇  foo
",
  "│
",
  "│  line 0
",
  "<erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "│  line 0
│  line 1
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "│  line 1
│  line 2
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "│  line 2
│  line 3
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "│
◆  woo!
",
  "│
│  line 2
│  line 3
",
]
`;

exports[`taskLog (isCI = false) > retainLog > success > retainLog = true outputs full log 1`] = `
[
  "│
",
  "◇  foo
",
  "│
",
  "│  line 0
",
  "<erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "│  line 0
│  line 1
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "│  line 0
│  line 1
│  line 2
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "│  line 0
│  line 1
│  line 2
│  line 3
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "│
◆  woo!
",
  "│
│  line 0
│  line 1
│  line 2
│  line 3
",
]
`;

exports[`taskLog (isCI = false) > retainLog > success > retainLog = true outputs full log with limit 1`] = `
[
  "│
",
  "◇  foo
",
  "│
",
  "│  line 0
",
  "<erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "│  line 0
│  line 1
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "│  line 1
│  line 2
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "│  line 2
│  line 3
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "│
◆  woo!
",
  "│
│  line 0
│  line 1
│  line 2
│  line 3
",
]
`;

exports[`taskLog (isCI = false) > success > clears output and renders message 1`] = `
[
  "│
",
  "◇  foo
",
  "│
",
  "│  line 0
",
  "<erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "│  line 0
│  line 1
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "│
◆  success!
",
]
`;

exports[`taskLog (isCI = false) > success > renders output if showLog = true 1`] = `
[
  "│
",
  "◇  foo
",
  "│
",
  "│  line 0
",
  "<erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "│  line 0
│  line 1
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "│
◆  success!
",
  "│
│  line 0
│  line 1
",
]
`;

exports[`taskLog (isCI = false) > writes message header 1`] = `
[
  "│
",
  "◇  foo
",
  "│
",
]
`;

exports[`taskLog (isCI = true) > error > clears output if showLog = false 1`] = `
[
  "│
",
  "◇  foo
",
  "│
",
  "<erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "│
■  some error!
",
]
`;

exports[`taskLog (isCI = true) > error > renders output with message 1`] = `
[
  "│
",
  "◇  foo
",
  "│
",
  "<erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "│
■  some error!
",
  "│
│  line 0
│  line 1
",
]
`;

exports[`taskLog (isCI = true) > group > applies limit per group 1`] = `
[
  "│
",
  "◇  Some log
",
  "│
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
]
`;

exports[`taskLog (isCI = true) > group > can render multiple groups of different sizes 1`] = `
[
  "│
",
  "◇  Some log
",
  "│
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
]
`;

exports[`taskLog (isCI = true) > group > can render multiple groups of equal size 1`] = `
[
  "│
",
  "◇  Some log
",
  "│
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
]
`;

exports[`taskLog (isCI = true) > group > handles empty groups 1`] = `
[
  "│
",
  "◇  Some log
",
  "│
",
]
`;

exports[`taskLog (isCI = true) > group > renders error state 1`] = `
[
  "│
",
  "◇  Some log
",
  "│
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
]
`;

exports[`taskLog (isCI = true) > group > renders group error state 1`] = `
[
  "│
",
  "◇  Some log
",
  "│
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
]
`;

exports[`taskLog (isCI = true) > group > renders group success state 1`] = `
[
  "│
",
  "◇  Some log
",
  "│
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
]
`;

exports[`taskLog (isCI = true) > group > renders success state 1`] = `
[
  "│
",
  "◇  Some log
",
  "│
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
]
`;

exports[`taskLog (isCI = true) > group > showLog shows all groups in order 1`] = `
[
  "│
",
  "◇  Some log
",
  "│
",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "│
■  overall error
",
  "│  Group 0
",
  "│
│  Group 0 line 0
│  Group 0 line 1
│  Group 0 line 2
",
  "│  Group 1
",
  "│
│  Group 1 line 0
│  Group 1 line 1
│  Group 1 line 2
│  Group 1 line 3
│  Group 1 line 4
",
]
`;

exports[`taskLog (isCI = true) > message > can write line by line 1`] = `
[
  "│
",
  "◇  foo
",
  "│
",
  "<erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
]
`;

exports[`taskLog (isCI = true) > message > can write multiple lines 1`] = `
[
  "│
",
  "◇  foo
",
  "│
",
]
`;

exports[`taskLog (isCI = true) > message > enforces limit if set 1`] = `
[
  "│
",
  "◇  foo
",
  "│
",
  "<erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
]
`;

exports[`taskLog (isCI = true) > message > prints empty lines 1`] = `
[
  "│
",
  "◇  foo
",
  "│
",
  "<erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
]
`;

exports[`taskLog (isCI = true) > message > raw = true appends message text until newline 1`] = `
[
  "│
",
  "◇  foo
",
  "│
",
  "<erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
]
`;

exports[`taskLog (isCI = true) > message > raw = true works when mixed with non-raw messages 1`] = `
[
  "│
",
  "◇  foo
",
  "│
",
  "<erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
]
`;

exports[`taskLog (isCI = true) > message > raw = true works when started with non-raw messages 1`] = `
[
  "│
",
  "◇  foo
",
  "│
",
  "<erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
]
`;

exports[`taskLog (isCI = true) > retainLog > error > outputs limited log with limit by default 1`] = `
[
  "│
",
  "◇  foo
",
  "│
",
  "<erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "│
■  woo!
",
  "│
│  line 2
│  line 3
",
]
`;

exports[`taskLog (isCI = true) > retainLog > error > retainLog = false outputs full log without limit 1`] = `
[
  "│
",
  "◇  foo
",
  "│
",
  "<erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "│
■  woo!
",
  "│
│  line 0
│  line 1
│  line 2
│  line 3
",
]
`;

exports[`taskLog (isCI = true) > retainLog > error > retainLog = false outputs limited log with limit 1`] = `
[
  "│
",
  "◇  foo
",
  "│
",
  "<erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "│
■  woo!
",
  "│
│  line 2
│  line 3
",
]
`;

exports[`taskLog (isCI = true) > retainLog > error > retainLog = true outputs full log 1`] = `
[
  "│
",
  "◇  foo
",
  "│
",
  "<erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "│
■  woo!
",
  "│
│  line 0
│  line 1
│  line 2
│  line 3
",
]
`;

exports[`taskLog (isCI = true) > retainLog > error > retainLog = true outputs full log with limit 1`] = `
[
  "│
",
  "◇  foo
",
  "│
",
  "<erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "│
■  woo!
",
  "│
│  line 0
│  line 1
│  line 2
│  line 3
",
]
`;

exports[`taskLog (isCI = true) > retainLog > success > outputs limited log with limit by default 1`] = `
[
  "│
",
  "◇  foo
",
  "│
",
  "<erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "│
◆  woo!
",
  "│
│  line 2
│  line 3
",
]
`;

exports[`taskLog (isCI = true) > retainLog > success > retainLog = false outputs full log without limit 1`] = `
[
  "│
",
  "◇  foo
",
  "│
",
  "<erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "│
◆  woo!
",
  "│
│  line 0
│  line 1
│  line 2
│  line 3
",
]
`;

exports[`taskLog (isCI = true) > retainLog > success > retainLog = false outputs limited log with limit 1`] = `
[
  "│
",
  "◇  foo
",
  "│
",
  "<erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "│
◆  woo!
",
  "│
│  line 2
│  line 3
",
]
`;

exports[`taskLog (isCI = true) > retainLog > success > retainLog = true outputs full log 1`] = `
[
  "│
",
  "◇  foo
",
  "│
",
  "<erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "│
◆  woo!
",
  "│
│  line 0
│  line 1
│  line 2
│  line 3
",
]
`;

exports[`taskLog (isCI = true) > retainLog > success > retainLog = true outputs full log with limit 1`] = `
[
  "│
",
  "◇  foo
",
  "│
",
  "<erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "│
◆  woo!
",
  "│
│  line 0
│  line 1
│  line 2
│  line 3
",
]
`;

exports[`taskLog (isCI = true) > success > clears output and renders message 1`] = `
[
  "│
",
  "◇  foo
",
  "│
",
  "<erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "│
◆  success!
",
]
`;

exports[`taskLog (isCI = true) > success > renders output if showLog = true 1`] = `
[
  "│
",
  "◇  foo
",
  "│
",
  "<erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "<erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.up count=1><erase.line><cursor.left count=1>",
  "│
◆  success!
",
  "│
│  line 0
│  line 1
",
]
`;

exports[`taskLog (isCI = true) > writes message header 1`] = `
[
  "│
",
  "◇  foo
",
  "│
",
]
`;
